tests/desugar/should_fail/timed_rep_link_parallel.csp
channel a, b, tock

Timed (\_ @ 1) {
    procTest1 = [a <-> b] i:<> @ STOP
}
